--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql-tag": "^2.12.6",
     "gray-matter": "^4.0.3",
     "next": "14.2.9",
+    "next-intl": "^3.19.1",
     "npm": "^10.8.3",
     "react": "^18",
     "react-dom": "^18",
